--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.19.0",
     "cleaners": "^0.3.13",
     "commander": "^6.1.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "csv-stringify": "^6.2.0",
     "date-fns": "^2.16.1",
