--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "rimraf lib",
     "fix": "npm run lint -- --fix",
     "precommit": "lint-staged && npm run prepare",
-    "prepare": "npm-run-all clean -p build.*",
+    "prepare": "husky install && npm-run-all clean -p build.*",
     "start": "node -r sucrase/register src/indexCors.ts",
     "lint": "eslint ."
   },
@@ -62,7 +62,7 @@
     "eslint-plugin-simple-import-sort": "^6.0.1",
     "events": "^3.3.0",
     "https-browserify": "^1.0.0",
-    "husky": ">=3.0.0",
+    "husky": "^7.0.0",
     "lint-staged": "^10.2.11",
     "mocha": "^9.0.3",
     "npm-run-all": "^4.1.5",
