Fix `@typescript-eslint/no-misused-promises` rule with promise router

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,6 @@
   },
   "plugins": ["simple-import-sort"],
   "rules": {
-    "simple-import-sort/imports": "error",
-    "@typescript-eslint/no-misused-promises": "off"
+    "simple-import-sort/imports": "error"
   }
 }
