--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^2.16.1",
     "date-fns-tz": "^1.1.4",
     "express": "^4.17.3",
+    "express-promise-router": "^4.1.1",
     "node-fetch": "^2.6.7",
     "raw-body": "^2.5.2"
   },
