Fix linting packages and configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
   },
   "plugins": ["simple-import-sort"],
   "rules": {
-    "simple-import-sort/sort": "error"
+    "simple-import-sort/imports": "error",
+    "@typescript-eslint/no-misused-promises": "off"
   }
 }
